--- a/backend_java/src/main/resources/application.properties
+++ b/backend_java/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8081
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.name=test
