--- a/backend_java/src/main/resources/application.properties
+++ b/backend_java/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8081
 
 spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.name=test
+spring.datasource.url=jdbc:postgresql://localhost:5432/transcribify
