--- a/backend_java/src/main/resources/application.properties
+++ b/backend_java/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/transcribify
+spring.datasource.url=jdbc:postgresql://db:5432/transcribify
