Пофиксил загрузку документов

--- a/backend_java/src/main/resources/application.properties
+++ b/backend_java/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://db:5432/transcribify
+
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=${java.io.tmpdir}
